--- a/website/src/css/home-page/banner.css
+++ b/website/src/css/home-page/banner.css
@@ -17,6 +17,10 @@
   background-size: cover;
 }
 
+.ban-main-title {
+  font-family: "Rubik Mono One", sans-serif;
+}
+
 .ban-img-txt {
   /* Container for banner text */
   width: 50vw;
