--- a/website/src/css/home-page/project.css
+++ b/website/src/css/home-page/project.css
@@ -1,11 +1,93 @@
 .project-item {
   width: 40%;
   max-width: 400px;
-  height: 200px;
+  height: 500px;
   display: flex;
-  background-color: lightgrey;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   margin: 20px;
   border-radius: 15px;
+}
+
+/*
+.project-item {
+  position: relative;
+}
+
+.project-item::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 15px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+*/
+
+.project-picture {
+  width: 100%;
+  height: 40%;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 15px 15px 0px 0px;
+  border-radius: 15px 15px 0px 0px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.project-text-container {
+  width: 100%;
+  height: 50%;
+  border-top: none;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 0px 0px 15px 15px;
+  border-radius: 0px 0px 15px 15px;
+}
+
+.project-title {
+  margin: 0;
+  width: 90%;
+  height: 20%;
+  margin: 0 auto;
+  color: var(--color-2-white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid var(--color-2-white);
+}
+
+.project-text {
+  height: 55%;
+  padding: 10px;
+  color: var(--color-2-white);
+  margin: 0;
+}
+
+.project-button {
+  background-color: rgba(0, 0, 0, 0);
+  border: 1px solid var(--color-2-white);
+
+  color: var(--color-2-white);
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin: 0px;
+}
+
+.project-button:hover {
+  background-color: var(--color-2-white);
+  color: var(--color-5-dark-blue);
+}
+
+.project-button:active {
+  background-color: var(--color-2-white);
+  color: green;
+}
+
+.project-pic-personal-website {
+  background-image: url(/home-page/mak-grad.jpg);
 }
 
 @media screen and (max-width: 560px) {
