--- a/website/src/css/home-page/skills-section.css
+++ b/website/src/css/home-page/skills-section.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  padding: 60px;
+  padding: 60px 80px 80px 80px;
 }
 
 .single-skill {
