--- a/website/src/css/home-page/project.css
+++ b/website/src/css/home-page/project.css
@@ -1,13 +1,15 @@
 .project-item {
-  width: 40%;
   max-width: 400px;
-  height: 500px;
+  width: 40%;
+  min-height: 500px;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   margin: 20px;
   border-radius: 15px;
+  border: 1px solid #e6e6e6;
 }
 
 /*
@@ -29,7 +31,7 @@
 
 .project-picture {
   width: 100%;
-  height: 40%;
+  height: 200px;
   -moz-border-radius: 0px;
   -webkit-border-radius: 15px 15px 0px 0px;
   border-radius: 15px 15px 0px 0px;
@@ -40,7 +42,12 @@
 
 .project-text-container {
   width: 100%;
-  height: 50%;
+  min-height: 300px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border-top: none;
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px 0px 15px 15px;
@@ -49,51 +56,48 @@
 
 .project-title {
   margin: 0;
-  width: 90%;
-  height: 20%;
-  margin: 0 auto;
-  color: var(--color-2-white);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-bottom: 1px solid var(--color-2-white);
+  width: 100%;
+  height: auto;
+  font-weight: bold;
+  padding: 15px;
 }
 
 .project-text {
-  height: 55%;
-  padding: 10px;
-  color: var(--color-2-white);
+  height: auto;
   margin: 0;
+  text-align: left;
+  padding: 0 20px 20px 20px;
+}
+
+.project-button-container {
+  height: 60px;
+  display: flex;
 }
 
 .project-button {
   background-color: rgba(0, 0, 0, 0);
-  border: 1px solid var(--color-2-white);
-
-  color: var(--color-2-white);
+  border: 1px solid #000;
+  color: #000;
   padding: 5px 10px;
   border-radius: 5px;
-  margin: 0px;
+  margin: 0;
+  height: 40px;
 }
 
 .project-button:hover {
-  background-color: var(--color-2-white);
-  color: var(--color-5-dark-blue);
-}
-
-.project-button:active {
-  background-color: var(--color-2-white);
-  color: green;
+  background-color: var(--color-5-dark-blue);
+  color: var(--color-2-white);
 }
 
 .project-pic-personal-website {
   background-image: url(/home-page/mak-grad.jpg);
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 700px) {
   .project-item {
     width: 100%;
     max-width: 100%;
-    height: 200px;
+    height: auto;
+    margin: 20px 0px;
   }
 }
