--- a/website/src/css/home-page/skills-section.css
+++ b/website/src/css/home-page/skills-section.css
@@ -51,3 +51,9 @@
   width: 100%;
   height: 50px;
 }
+
+@media screen and (max-width: 510px) {
+  .skills-container {
+    padding: 60px 20px 80px 20px;
+  }
+}
