--- a/website/src/css/home-page/banner.css
+++ b/website/src/css/home-page/banner.css
@@ -13,7 +13,7 @@
   height: 80vh;
   background-image: url(/home-page/me-2.jpg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: left;
   background-size: cover;
 }
 
@@ -47,12 +47,27 @@
     Media Queries - Used when screen size changes
 */
 
-@media screen and (max-width: 510px) {
+@media screen and (max-width: 700px) {
   .ban-imp {
     /* When screen gets small, put text under profile picture */
     flex-direction: column;
+    align-items: center;
+    padding: 60px 0;
   }
 
+  .ban-img {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+  }
+
+  .ban-img-txt {
+    text-align: center;
+    padding: 0px;
+  }
+}
+
+@media screen and (max-width: 510px) {
   .ban-img-txt {
     /* Add spacing between banner picture and text */
     margin-top: 20px;
