--- a/website/src/css/home-page/project.css
+++ b/website/src/css/home-page/project.css
@@ -57,12 +57,14 @@
 .project-title {
   margin: 0;
   width: 100%;
+  min-height: 60px;
   height: auto;
   font-weight: bold;
   padding: 15px;
 }
 
 .project-text {
+  min-height: 180px;
   height: auto;
   margin: 0;
   text-align: left;
@@ -70,7 +72,8 @@
 }
 
 .project-button-container {
-  height: 60px;
+  min-height: 60px;
+  height: auto;
   display: flex;
 }
 
