--- a/website/src/css/css-global/footer.css
+++ b/website/src/css/css-global/footer.css
@@ -1,10 +1,9 @@
 .ftr-imp {
   /* Footer inner main panel */
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: row;
-  min-height: 75px;
+  justify-content: space-evenly;
+  align-items: center;
   height: auto;
 }
 
@@ -16,12 +15,22 @@
 .ftr-section {
   width: 30%;
   height: 100%;
-  text-align: left;
-  padding: 60px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 60px 0;
   color: var(--color-2-white);
 }
 
 .ftr-social {
+}
+
+.ftr-logo {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+
+  background-image: url(/website-logo.png);
 }
 
 .ftr-contact {
