--- a/website/src/css/css-global/structure.css
+++ b/website/src/css/css-global/structure.css
@@ -17,6 +17,7 @@
   background-image: url(/website-logo.png);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
 }
 
 /*
