Updated language on Welcome and Work Exp sections

--- a/website/src/css/home-page/welcome.css
+++ b/website/src/css/home-page/welcome.css
@@ -15,7 +15,11 @@
   margin: 0 0 20px 0;
 }
 
-.wel-section-txt {
+.wel-section-txt-1 {
+  margin: 0 0 20px 0;
+}
+
+.wel-section-txt-2 {
   margin: 0px;
 }
 
