Added anchorlinks and scrolling behavior for navbar

--- a/website/src/css/css-global/navbar.css
+++ b/website/src/css/css-global/navbar.css
@@ -37,10 +37,16 @@
 
 .nb-item {
   /* Each item in navbar */
+  color: inherit;
   display: inline-flex;
   align-items: center;
   height: auto;
   padding: 0px 20px;
+}
+
+.nb-item:hover {
+  color: inherit;
+  text-decoration: none;
 }
 
 /*
