--- a/website/src/css/css-global/navbar.css
+++ b/website/src/css/css-global/navbar.css
@@ -1,13 +1,3 @@
-.nb {
-  position: relative;
-  z-index: 10;
-  /*
-  -moz-box-shadow: 0px 0px 50px 10px #000;
-  -webkit-box-shadow: 0px 0px 50px 10px #000; /* x-move, y-move, gradient-harshness*/
-  /*box-shadow: 0px 0px 50px 10px #000;
-  */
-}
-
 .nb-container {
   /* Generic navbar container */
   display: flex;
@@ -45,6 +35,7 @@
 }
 
 .nb-item:hover {
+  /* Ensures the navbar link colors dont change on hightlight */
   color: inherit;
   text-decoration: none;
 }
