--- a/website/src/css/css-global/section-title.css
+++ b/website/src/css/css-global/section-title.css
@@ -1,4 +1,5 @@
 .section-title {
+  /* Main section title */
   width: 100%;
   height: auto;
   margin: 20px 0 60px 0;
@@ -6,6 +7,7 @@
 
 .main-title,
 .sub-title {
+  /* Generic formatting for main and sub title */
   margin: 0px;
   padding: 0px;
 }
