--- a/website/src/css/home-page/job.css
+++ b/website/src/css/home-page/job.css
@@ -1,4 +1,5 @@
 .job-item {
+  /* Each job item as a whole */
   width: 100%;
   max-width: 570px;
   height: auto;
@@ -8,6 +9,7 @@
 }
 
 .job-picture {
+  /* Image for each job */
   width: 30%;
   height: 30%;
   padding-bottom: 30%;
@@ -18,6 +20,7 @@
 }
 
 .job-text {
+  /* Section that contains all the text about the job, including headers */
   width: 70%;
   height: 100%;
   text-align: left;
@@ -25,48 +28,58 @@
 }
 
 .job-fast-llc {
+  /* FAST Logo 1 */
   background-image: url(/home-page/fast.png);
 }
 
 .job-msu-1 {
+  /* MSU Logo 1 */
   background-image: url(/home-page/msu-logo.jpg);
 }
 
 .job-msu-2 {
+  /* MSU Logo 2 */
   background-image: url(/home-page/bobcat.png);
 }
 
 .job-company {
+  /* Job company */
   font-weight: bold;
   margin: 0;
 }
 
 .job-title {
+  /* Main job header */
   margin: 0;
 }
 
 .job-location {
+  /* Add space between job header and main text */
   margin: 0 0 20px 0;
 }
 
 @media screen and (max-width: 510px) {
   .job-item {
+    /* Span out to fit the width of the phone */
     flex-direction: column;
     width: 100%;
     height: auto;
   }
 
   .job-picture {
+    /* Spread image out to span the width of the phone */
     width: 100%;
     margin: 20px 0 40px 0;
   }
 
   .job-text {
+    /* Spread text out to fit the screen */
     width: 100%;
     padding: 0px;
   }
 
   .job-item-not-last::after {
+    /* Add little line dividers when in mobile mode */
     content: "";
     width: 90%;
     height: 1px;
