--- a/website/src/css/home-page/skills-section.css
+++ b/website/src/css/home-page/skills-section.css
@@ -1,4 +1,5 @@
 .skills-container {
+  /* Imp for Skills Section */
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -7,6 +8,7 @@
 }
 
 .single-skill {
+  /* Each individual skill */
   width: 100%;
   max-width: 350px;
   height: 40px;
@@ -18,10 +20,12 @@
 }
 
 .single-skill p {
+  /* Add spacing for individual skill */
   margin: 0px;
 }
 
 .skill-stars {
+  /* Individual list of stars */
   width: 150px;
   height: 100%;
   display: flex;
@@ -32,6 +36,7 @@
 .star-filled,
 .star-unfilled,
 .star-half-filled {
+  /* Individual star. This is each single star */
   width: 30px;
   height: 30px;
   background-repeat: no-repeat;
@@ -41,23 +46,28 @@
 }
 
 .star-filled {
+  /* Image for filled star */
   background-image: url(/star-filled.png);
 }
 
 .star-half-filled {
+  /* Image for half filled star */
   background-image: url(/star-half-filled.png);
 }
 
 .star-unfilled {
+  /* Image for unfilled star */
   background-image: url(/star-not-filled.png);
 }
 
 .skills-divider {
+  /* Divider between hard technical skills and less technical skills section */
   width: 100%;
   height: 50px;
 }
 
 @media screen and (max-width: 510px) {
+  /* Reduce padding for mobile */
   .skills-container {
     padding: 60px 20px 80px 20px;
   }
